[package]
name = "CachedPi"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11.0", features = ["transport"] }
prost = "0.12.6"
tokio = { version = "1.38.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"